# aisi-joints

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  requirements.txt  setup.cfg  setup.py
aisi_joints/: constants.py
aisi_joints/_utils/: __init__.py  extras_require.py  logging.py  tensorboard.py  utils.py
aisi_joints/coco/: coco_dataset.py
aisi_joints/data/: __init__.py  coco_format.py  common.py  compute_mean_std.py  concatenate_dataset.py  filter_csv.py  generate_tfrecord.py  import_pascal_voc.py  import_rcm_api.py  partition_dataset.py  prepare_revalidation_samples.py  preprocess_csv.py  update_filepaths.py  utils.py
aisi_joints/detr/: __init__.py  _data.py  _detr.py  config.detectron.yml  config.yml  evaluate.py  requirements.txt  train.py
aisi_joints/eval/: coco_format.py  detect.py  evaluate.py  utils.py
aisi_joints/fiftyone/: __init__.py  __main__.py  fiftyone.py  requirements.txt
aisi_joints/img_cls/: __init__.py  _config.py  _dataloader.py  _log_images.py  _models.py  config.py  config.yml  data.py  dataloader.py  evaluate.py  export_model.py  log_images.py  requirements.txt  resnet.py  temp_scale.py  train.py  tune_hyperparams.py
aisi_joints/self_supervised/: __init__.py  config.py  data.py  evaluate.py  requirements.txt  train.py  tune_hyperparams.py
aisi_joints/tfod/: __init__.py  detect.py  evaluate.py  requirements.txt  utils.py
aisi_joints/ui/: __init__.py  __main__.py  application.py  filter_flags.py  (+2 more)
pipeline_configs/: README.md
resources/: resources.qrc
scripts/: install_object_detection.py  update_pycocotools.py
(+40 files in other folders)
