[metadata]
name = aisi_joints
version = attr: aisi_joints.__version__
description = A python library with tools for development of SBB AISI models.
long_description = file: README.md
url = https://github.com/antolu/aisi-joints
author = Anton Lu
author_email = anton96lu@gmail.com
license = GNU General Public License version 3
platform = Windows, Linux
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
include_package_data = true
packages = find:

python_requires = >= 3.7
install_requires =
    dataclasses
    multipledispatch
    numpy>=1.19
    opencv-python
    pandas
    PyQt5
    pyqt5ac
    pyqtgraph
    tqdm

[options.extras_require]
test =
    flake8
    pylint
    pytest-cov
all =
    tensorflow==2.6.0

[flake8]
extend-ignore =
    F
